<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fragmentBackground"
    android:orientation="vertical"
    tools:context=".ui.templates.createTemplate.CreateTemplateFragment">

    <ScrollView
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/SmsSender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_sms_sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:paddingTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/message"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_sms_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="testing \n testin2"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_template_items"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/list_item_template_fields"
                tools:itemCount="2"/>

            <androidx.appcompat.widget.AppCompatButton
                android:padding="5dp"
                android:id="@+id/btn_add_field"
                android:background="@drawable/rounded_corner_bg_green"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_field"
                android:textColor="@color/grayDark"
                />
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/cancel"
            android:textColor="@color/grayDark"
            android:background="@drawable/rounded_corner_bg_white"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:background="@drawable/rounded_corner_bg_green"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/grayDark"
            />
    </LinearLayout>
</LinearLayout>