<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_ripple_white"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:id="@+id/delete_container"
        android:layout_width="100dp"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_ripple_white_red"
        android:paddingStart="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constrainedHeight="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/delete" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remove"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/delete_container"
        app:layout_constrainedWidth="true"
        android:layout_marginEnd="-10dp"
        android:background="@drawable/rounded_ripple_white"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="-4dp"
            android:id="@+id/menu"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:hintTextColor="@color/grayDark"
            android:hint="@string/search">
            <AutoCompleteTextView
                android:id="@+id/tv_template_field_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_value"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            android:orientation="horizontal"
            app:hintTextColor="@color/grayDark"
            android:hint="@string/value"
            app:layout_constraintTop_toBottomOf="@+id/menu"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tv_template_field_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>