<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.purchases.PurchasesFragment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/rounded_corner_bg_green"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_deposits"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_total_purchases"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:listitem="@layout/purchases_total_list_item_layout"
                tools:itemCount="2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rv_total_purchases"
                android:text="Last Message"
                android:textSize="18sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@drawable/rounded_corner_bg_green"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="20dp"
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:hintTextColor="@color/grayDark"
                android:hint="@string/search">

                <AutoCompleteTextView
                    android:id="@+id/tv_purchase_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_value"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                android:orientation="horizontal"
                app:hintTextColor="@color/grayDark"
                android:hint="@string/value"
                app:layout_constraintTop_toBottomOf="@+id/menu"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_purchase_filter_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/iv_search"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/rounded_ripple"
                app:layout_constraintTop_toBottomOf="@id/layout_value"
                app:layout_constraintStart_toStartOf="parent">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/search"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/search"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:background="@drawable/rounded_ripple"
                app:layout_constraintTop_toBottomOf="@id/layout_value"
                app:layout_constraintEnd_toEndOf="parent">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/reset"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset"
                    android:textSize="18sp"/>
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_purchases"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/purchase_list_item_layout"
            tools:itemCount="2"/>

    </LinearLayout>
</ScrollView>